# control-plane/internal/api/server.go
@@ -146,6 +146,7 @@ func (s *Server) Router() http.Handler {
 			r.Get("/paging-groups", s.listPagingGroups)
 			r.Get("/paging-groups/{groupID}/members", s.listPagingGroupMembers)
 			r.Get("/conference-rooms", s.listConferenceRooms)
+			r.Get("/presence", s.listExtensionPresence)
 			r.Get("/park-lots", s.listParkLots)
 			r.Get("/e911-locations", s.listE911Locations)
 			r.Get("/queue-callbacks", s.listQueueCallbacks)
